--- a/pacientes/templates/pacientes/paciente_list.html
+++ b/pacientes/templates/pacientes/paciente_list.html
@@ -4,7 +4,7 @@
     
 {% block contenido %}
 <h1>Lista de pacientes</h1>
-<table>
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>Nombre</th>
