Modifica los estilos de nuevo paciente y agrega funcionalidad para actuializar pacientes

--- a/pacientes/templates/pacientes/paciente_form.html
+++ b/pacientes/templates/pacientes/paciente_form.html
@@ -1,19 +1,31 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-Agrega paciente
+    Agrega paciente
 {% endblock titulo %}
 
 {% block contenido %}
 <div class="row">
-    <div class="card card-primary">
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" class="btn btn-block btn-success" value="Save">
-            </form>
+    <div class="col-md-2"></div> 
+    <div class="col-md-8">
+        <div class="card card-primary">
+            <div class="card-header">
+                <h3 class="card-title">Nuevo paciente</h3>
+            </div>
+                <form method="post">
+                    <div class="card-body">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                    </div>
+                    <div class="card-footer">
+                        <input type="submit" class="btn btn-success" value="Guardar">
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>
+    </div> 
+    <div class="col-md-2"></div> 
+
     {% endblock contenido %}
     
     
