--- a/pacientes/templates/pacientes/paciente_list.html
+++ b/pacientes/templates/pacientes/paciente_list.html
@@ -26,8 +26,12 @@
             <td>{{paciente.numero_ss}}</td>
             <td>{{paciente.tipo_sangre}}</td>
             <td>
-                <a href="">Editar</a>
-                <a href="">Eliminar</a>
+                <a title="Actualiza paciente" class="btn btn-warning" href="{% url 'pacientes:editar' paciente.id %}">
+                    <i class="far fa-edit"></i>
+                </a>
+                <a title="Elimina paciente" class="btn btn-danger" href="{% url 'pacientes:eliminar' paciente.id %}">
+                    <i class="far fa-trash-alt"></i>
+                </a>
             </td>
         </tr>
         {% endfor %}
