--- a/pacientes/templates/base.html
+++ b/pacientes/templates/base.html
@@ -577,5 +577,6 @@
 <script src="{% static 'dist/js/pages/dashboard.js' %}"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="{% static 'dist/js/demo.js' %}"></script>
+<script src="{% static 'dist/js/funciones.js' %}"></script>
 </body>
 </html>
