--- a/pacientes/templates/base.html
+++ b/pacientes/templates/base.html
@@ -175,7 +175,11 @@
                 <a href="#" class="nav-link">
                   <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
-                      <img src="{% static 'dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
+                      {% if user.usuario.foto %}
+                        <img src="{{MEDIA_URL}}{{user.usuario.foto}}" class="img-circle elevation-2" alt="User Image">
+                      {% else %}
+                        <img src="{% static 'dist/img/user.png' %}" class="img-circle elevation-2" alt="User Image">
+                      {% endif %}
                     </div>
                     <div class="info">
                       {{user}}
@@ -184,7 +188,7 @@
                 
                 <ul class="nav nav-treeview">
                   <li class="nav-item">
-                    <a href="" class="nav-link">
+                    <a href="{% url 'usuarios:perfil' user.pk %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Perfil</p>
                     </a>
