--- a/pacientes/templates/pacientes/paciente_list.html
+++ b/pacientes/templates/pacientes/paciente_list.html
@@ -54,5 +54,27 @@
         {% endfor %}
     </tbody>
 </table>
+
+<nav aria-label="pagination">
+    <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page=1" tabindex="-2" aria-disabled="true">&laquo; first</a>
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" tabindex="-1" aria-disabled="true">Previous</a>
+            </li>
+        {% endif %}
+        
+        {% for page in page_obj.paginator.page_range %}
+            <li class="page-item"><a class="page-link" href="?page={{page}}">{{ page }}</a> </li>
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            </li>
+        {% endif %}
+    </ul>
+  </nav>
 {% endblock contenido %}
     
