se agregaron los permisos y la lista de usuarios

--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -68,6 +68,7 @@
           </div>
           <!-- /.col -->
         </div>
+        <input type="hidden" name="next" value="{{next}}">
       </form>
 
     
