--- a/pacientes/templates/pacientes/pacientes_pdf.html
+++ b/pacientes/templates/pacientes/pacientes_pdf.html
@@ -1,18 +1,19 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
-{% block titulo %}Lista de pacientes{% endblock titulo %}
+{% block titulo %}{% trans 'Lista de pacientes' %}{% endblock titulo %}
     
 {% block contenido %}
-<h1>Lista de pacientes</h1>
+<h1>{% trans 'Lista de pacientes' %}</h1>
 <table class="table table-bordered">
     <thead>
         <tr>
-            <th>Nombre</th>
-            <th>Apellido paterno</th>
-            <th>Apellido materno</th>
-            <th>Fecha de nacimiento</th>
-            <th>No. Seguro social</th>
-            <th>Tipo de sangre</th>
+            <th>{% trans 'Nombre' %}</th>
+            <th>{% trans 'Apellido paterno' %}</th>
+            <th>{% trans 'Apellido materno' %}</th>
+            <th>{% trans 'Fecha de nacimiento' %}</th>
+            <th>{% trans 'No. Seguro social' %}</th>
+            <th>{% trans 'Tipo de sangre' %}</th>
             
         </tr>
     </thead>
