--- a/articulos/templates/articulos/historial_pdf.html
+++ b/articulos/templates/articulos/historial_pdf.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
 {% block contenido %}
 <div class="contenedor">
-    <h1>Historial Ventas</h1>
+    <h1>{% trans 'Historial Ventas' %}</h1>
 
 </div>
 
@@ -12,7 +13,7 @@
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th>Producto</th>
+                <th>{% trans 'Producto' %}</th>
             </tr>
         </thead>
         <tbody>
